Fix sticky header on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -1003,7 +1003,6 @@ footer p {
 
     header {
         padding-top: 50px;
-        position: relative;
     }
 
     header h1 {
